--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,4 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <h1>こんにちは、<%= current_user.email %>さん</h1>
+  <h1>Hello, <%= current_user.username %>！</h1>
   <p>ユーザー用ページです</p>
 </div>
