--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <div class="container_top">
+  <div class="container_top mb-3">
     <div class="created_at">
       <%= @diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
     </div>
@@ -33,6 +33,6 @@
   </div>
   <div class="link text-end">
     <%= link_to "編集", edit_diary_path(@diary.id) %>
-    <%= button_to "削除", diary_path(@diary.id), { method: :delete, data: { confirm: "本当に削除しますか？" }, class: "diary_destroy_button" } %>
+    <%= button_to "削除", diary_path(@diary.id), form: { data: { turbo_confirm: "本当に削除しますか？" }, method: :delete } %>
   </div>
 </div>
