--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,13 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <h1>Hello, <%= current_user.username %>！</h1>
-  <p>ユーザー用ページです</p>
+  <p class="mb-3 text-xl">Hello, <span class="font-semibold"><%= current_user.username %></span>さん</p>
+  <div class="flex justify-around">
+    <div class="w-5/12 shadow my-3 p-3 rounded">
+      <p class="font-semibold mb-3">日記総投稿回数</p>
+      <p class="text-end"><span class="font-semibold text-2xl"><%= @posted_days.count %></span> 回</p>
+    </div>
+    <div class="w-5/12 shadow my-3 p-3 rounded">
+      <p class="font-semibold mb-3">学んだ単語数</p>
+      <p class="text-end"><span class="font-semibold text-2xl"><%= @number_of_words.count %></span> 個</p>
+    </div>
+  </div>
 </div>
