--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,10 +1,21 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <p class="text-xl">Hello, <span class="font-semibold"><%= current_user.username %></span>さん</p>
+  <div class="mx-6 flex">
+    <div>
+      <% if current_user.avatar? %>
+        <%= image_tag current_user.avatar.url, class:"leading-10" %>
+      <% else %>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="text-black w-8 h-8">
+          <path fill-rule="evenodd" d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" clip-rule="evenodd" />
+        </svg>
+      <% end %>
+    </div>
+    <div class="text-xl pl-8 font-semibold"><%= current_user.username %></div>
+  </div>
   <p class="className={`
     mt-1 mb-6 font-bold tracking-tight bg-gradient-to-r from-green-500 via-blue-500 to-pink-500
-    bg-clip-text text-transparent text-lg
+    bg-clip-text text-transparent text-center
     `}">
-    Let's do our best again today!
+    <%= current_user.bio %>
   </p>
   <div class="flex justify-around">
     <div class="w-5/12 bg-pink-100 shadow my-3 p-3 rounded">
