--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -23,3 +23,7 @@
     <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post %><br />
   <% end %>
 <% end %>
+
+<p class="mt-4 mb-6">
+  <%= button_to "ゲストログインはこちら", users_guest_sign_in_path, data: { turbo_method: :post }, class:"text-white ml-1 mb-3 px-3 py-2 bg-blue-700 hover:bg-blue-600 hover:font-bold rounded" %>
+</p>
