--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
+<div class="bg-white shadow mx-auto sm:my-8 p-6 sm:w-8/12 rounded">
   <div class="mx-6 mt-8 flex">
     <div>
       <% if current_user.avatar? %>
@@ -26,18 +26,18 @@
         Let's do my best again today!
     </p>
   <% end %>
-  <div class="mb-12">
-    <div class="bg-yellow-100 w-5/12 mx-auto shadow my-3 p-4 rounded">
+  <div class="sm:mb-12 mb-6">
+    <div class="bg-yellow-100 sm:w-5/12 mx-auto shadow my-3 p-4 rounded">
       <p class="font-semibold mb-3">これまでの日記投稿日数</p>
       <p class="text-end"><span class="font-semibold text-2xl"><%= @diary_posted_days.count %></span> 日</p>
     </div>
   </div>
-  <div class="flex justify-around mb-8">
-    <div class="w-5/12 bg-cyan-100 shadow my-3 p-4 rounded">
+  <div class="sm:flex sm:justify-around mb-8">
+    <div class="sm:w-5/12 bg-cyan-100 shadow sm:my-3 mb-6 p-4 rounded">
       <p class="font-semibold mb-3">日記総投稿回数</p>
       <p class="text-end"><span class="font-semibold text-2xl"><%= @diaries.count %></span> 回</p>
     </div>
-    <div class="w-5/12 bg-green-100 shadow my-3 p-3 rounded">
+    <div class="sm:w-5/12 bg-green-100 shadow my-3 p-3 rounded">
       <p class="font-semibold mb-4">学んだ単語数</p>
       <p class="text-end"><span class="font-semibold text-2xl"><%= @words.count %></span> 個</p>
     </div>
