--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,16 +1,14 @@
-<div class="short_container">
-  <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-    <div class="exam_area">
-      <p><span>「<%= @exam_question.word.japanese_word %>」</span>の英語訳は？</p>
-      <%= form_with model: @exam_question, url: exam_question_path do |f| %>
-        <div class="field">
-          <%= f.label :english_word, "回答", class:"answer" %>：
-          <%= f.text_field :english_word, autocomplete:"off", class:"w-4/5 rounded border-none", placeholder: "apple" %>
-        </div>
-        <div class="field text-end">
-          <%= f.submit "次へ", class:"submit" %>
-        </div>
-      <% end %>
-    </div>
+<div class="bg-white shadow mx-auto my-8 p-6 sm:w-8/12 sm:rounded">
+  <div class="exam_area">
+    <p><span>「<%= @exam_question.word.japanese_word %>」</span>の英語訳は？</p>
+    <%= form_with model: @exam_question, url: exam_question_path do |f| %>
+      <div class="field">
+        <%= f.label :english_word, "回答", class:"answer" %>：
+        <%= f.text_field :english_word, autocomplete:"off", class:"w-4/5 rounded border-none", placeholder: "apple" %>
+      </div>
+      <div class="field text-end">
+        <%= f.submit "次へ", class:"submit" %>
+      </div>
+    <% end %>
   </div>
 </div>
