--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with model: model, local: true, data: { turbo: false } do |form| %>
   <div class="field pt-6">
     <%= form.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
-    <%= form.text_area :japanese_diary, class:"w-4/5 h-40 rounded", placeholder: "今日は７時に起きた。" %>
+    <%= form.text_area :japanese_diary, class:"sm:w-4/5 w-full h-40 rounded", placeholder: "今日は７時に起きた。" %>
   </div> 
   <div class="field pb-3">
     <%= form.label :english_diary, "日記（英語）", class:"mr-2" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br>
-    <%= form.text_area :english_diary, class:"w-4/5 h-40 rounded", placeholder: "I got up at seven this morning." %>
+    <%= form.text_area :english_diary, class:"sm:w-4/5 w-full h-40 rounded", placeholder: "I got up at seven this morning." %>
   </div>
   <div class="py-6 border-b">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="inline w-6 h-6">
