--- a/app/views/diaries/_word_fields.html.erb
+++ b/app/views/diaries/_word_fields.html.erb
@@ -2,15 +2,15 @@
   <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="field pt-6">
     <%= f.label :japanese_word, "単語、フレーズ（日本語）", class:"mr-2" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br>
-    <%= f.text_field :japanese_word, class:"w-4/5 h-5/6 rounded", placeholder: "起きる" %>
+    <%= f.text_field :japanese_word, class:"sm:w-4/5 w-full h-5/6 rounded", placeholder: "起きる" %>
   </div> 
   <div class="field pt-6">
     <%= f.label :english_word, "単語、フレーズ（英語）", class:"mr-2" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br>
-    <%= f.text_field :english_word, class:"w-4/5 rounded", placeholder: "get up" %>
+    <%= f.text_field :english_word, class:"sm:w-4/5 w-full rounded", placeholder: "get up" %>
   </div>
   <div class="field pt-6">
     <%= f.label :memo, "メモ", class:"bold" %><br>
-    <%= f.text_area :memo, class:"w-4/5 h-40 rounded", placeholder: "自動詞＋副詞。過去形はgot up。" %>
+    <%= f.text_area :memo, class:"sm:w-4/5 w-full h-40 rounded", placeholder: "自動詞＋副詞。過去形はgot up。" %>
   </div>
   <div class="field py-6 text-end">
     <%= link_to_remove_association "削除", f %>
