--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,7 +1,7 @@
 <div class="my-8 index_container">
   <div class="min-h-full">
     <% @diaries.each do |diary| %>
-      <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+      <div class="bg-white shadow mx-auto mt-3 mb-3 p-8 sm:w-8/12 sm:rounded">
         <div class="container_top">
           <div class="created_at">
             <%= diary.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
