--- a/app/views/all_diaries/index.html.erb
+++ b/app/views/all_diaries/index.html.erb
@@ -1,7 +1,7 @@
 <div class="my-8 index_container">
   <div class="diaries">
     <% @diaries.each do |diary| %>
-      <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+      <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 sm:w-8/12 sm:rounded">
         <div class="container_top mb-3">
           <% if diary.user.avatar? %>
             <div class="avatar">
